--- a/home/templates/home/community_landing.html
+++ b/home/templates/home/community_landing.html
@@ -53,7 +53,7 @@ Outreachy internships working with {{ community.name }}
 
 	<h2>Project Details</h2>
 	{% if not request.user.comrade.eligible_application and not request.user.comrade.approved_mentor_or_coordinator %}
-		<p>Project details are hidden, see message above.</p>
+		{% include 'home/snippet/project_hidden.html' %}
 	{% else %}
 		{% with projects=late_projects|add:ontime_projects %}
 		{% for project in projects %}
@@ -119,7 +119,7 @@ Outreachy internships working with {{ community.name }}
 			</div>
 			<br>
 		{% else %}
-			<p>Project details are hidden, see message above.</p>
+			{% include 'home/snippet/project_hidden.html' %}
 		{% endif %}
 	{% endfor %}
 {% endif %}
