Be clear about which project you're recording contributions to

--- a/home/templates/home/project_contributions.html
+++ b/home/templates/home/project_contributions.html
@@ -23,6 +23,10 @@ Record Contributions and Apply to {{ community.name }}
 &gt; Record a Contribution and Apply</p>
 
 <h1>Record Contributions and Apply to {{ community.name }}</h1>
+
+<p>You're recording contributions and applying to the following project:</p>
+<p><strong>{{ project.short_title }}</strong></p>
+
 <p>
 All applicants must work with a mentor to make a contribution to a project.
 </p>
