Add links to the project contribution page when we talk about deadlines.

--- a/home/templates/home/snippet/projects_for_round_page.html
+++ b/home/templates/home/snippet/projects_for_round_page.html
@@ -21,10 +21,14 @@
 		{% endif %}
 
 		{% if project.deadline == project.LATE %}
-			<p>Deadline is {{ current_round.appslate }} to record your contributions and create a final application.</p>
+			<p>Deadline is {{ current_round.appslate }} to
 		{% else %}
-			<p>Deadline is {{ current_round.appsclose }} to record your contributions and create a final application.</p>
+			<p>Deadline is {{ current_round.appsclose }} to
 		{% endif %}
+		{% if request.user.comrade.eligible_application %}<a href="{{ project.get_contributions_url }}">{% endif %}
+			record your contributions and create a final application.
+		{% if request.user.comrade.eligible_application %}</a>{% endif %}
+			</p>
 		{% include "home/snippet/project_skills_display.html" %}
 		</div>
 	</div>
