Add better instructions for school terms

--- a/home/templates/home/eligibility_wizard_school_terms.html
+++ b/home/templates/home/eligibility_wizard_school_terms.html
@@ -12,6 +12,10 @@ Are you eligible to apply to Outreachy?
 <p>
 Please enter information for each school term that overlaps with the Outreachy internship period,
 from {{ current_round.internstarts|date:"F d, Y" }} to {{ current_round.internends|date:"F d, Y" }}.
+Make sure to include all overlapping school terms, even if there is only a short period of time that overlaps with the Outreachy internship period.
+</p>
+<p>
+If you have no school terms that overlap with the Outreachy internship period, fill out the information for your current school term (or the last school term you took) and the next school term you will take.
 </p>
 <p>
 If less than three terms overlap with the Outreachy internship period, leave those terms blank.
