Add email reminders to applicants who made a contribution.
Not everyone signs up for the announcement list. A lot of people end up
with the announcement list in their Promotions tab on Gmail. At least
one or two applicants each round have trouble converting from UTC and
miss the deadline by a couple hours.

Hopefully semi-automating reminders to people who have made a
contribution will help. I'm not sending an email to all 1000+ people who
fill out an eligibility form each round.

Partially implements #110. We still need to send the people a summary of
their contributions and applications when the late project deadline closes.

--- a/home/templates/home/dashboard.html
+++ b/home/templates/home/dashboard.html
@@ -46,6 +46,15 @@ you can send an email to the announcements mailing list to remind applicants of 
 
 <p><a href="{% url 'email-deadline-reminder' %}"><input class="btn btn-success" value="Applicant Deadline Email" /></a>
 
+<p>You'll need to send reminder email to applicants who have recorded a contribution. The emails will only remind applicants who have made a contribution to a project whose deadline hasn't passed yet:
+<ul>
+	<li>A week before the regular deadline. Send the email on {{ current_round.regular_deadline_reminder }} at 4pm UTC.</li>
+	<li>A day before the regular deadline (which is a week and one day before the late deadline). Send the email on {{ current_round.regular_deadline_second_reminder }} at 4pm UTC.</li>
+	<li>A day before the late application deadline. Send the email on {{ current_round.late_deadline_reminder }} at 4pm UTC.</li>
+</ul>
+
+<p><a href="{% url 'email-contributor-deadline-reminder' %}"><input class="btn btn-success" value="Contributor Deadline Email" /></a>
+
 <h2>Community progress</h2>
 {% if pending_participations or approved_participations %}
 	<table class="table table-striped table-bordered">
